# gnuplot-dsl

./: LICENSE  README.md  flake.nix  gnuplot-dsl.cabal
src/Graphics/Gnuplot/: DSL.hs
src/Graphics/Gnuplot/DSL/: Arrow.hs  Command.hs  Drawable.hs  Expr.hs  Process.hs
